--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div class="container py-5 text-center" >
-        <h1>Count</h1>
+        <h1 class="fw-bold">Count</h1>
     <div id="count">
     <label id="countLabel" class="fw-bold">0</label><br>
     <button id="decreaseBtn" class="btn btn-danger">Decrease <span>-</span></button>
